rhel7: lib,ldms,baler - installation scriptlets
Add post-installation, pre-uninstallation, and post-uninstallation
scriptlets for lib, ldms and baler.

For lib, post-installation creates a soft-link
/etc/ld.so.conf.d/ovis-ld-so.conf, and run ldconfig so that the
dynamic loader recognizes the installed library. post-uninstallation
for lib removes the softlink and invoke ldconfig to update the loader.

For ldms and baler, post-installation calls ldconfig to update the
loader. The scriplet also creates systemd unit files and call
systemctl so that the system recognizes the new services. They are not
`enabled`. For pre-uninstallation, the scriptlet stop the services.
Then, in post-uninstallation scriptlet, the unit files are removed,
and systemctl and ldconfig are called to notify the removal of
services and libraries.

--- a/baler/rpm/rhel7.spec.in
+++ b/baler/rpm/rhel7.spec.in
@@ -17,6 +17,7 @@ Prefix: @prefix@
 %define _sysconfdir %{_prefix}/etc
 %define _localstatedir %{_prefix}/var
 %define _sharedstatedir %{_prefix}/var/lib
+%define _systemdir /usr/lib/systemd/system
 
 %description
 Baler - a lossless, deterministic log processing tool.
@@ -48,6 +49,25 @@ rm -rf %{buildroot}
 %{_prefix}/lib*/python*
 %endif
 %{_sysconfdir}
+
+%post
+/sbin/ldconfig
+/bin/ln -fs %{_sysconfdir}/systemd/system/balerd.master.service %{_systemdir}/balerd.master.service
+/bin/ln -fs %{_sysconfdir}/systemd/system/balerd.slave.service %{_systemdir}/balerd.slave.service
+/bin/ln -fs %{_sysconfdir}/systemd/system/bhttpd.service %{_systemdir}/bhttpd.service
+/usr/bin/systemctl daemon-reload
+
+%preun
+/usr/bin/systemctl stop balerd.master.service
+/usr/bin/systemctl stop balerd.slave.service
+/usr/bin/systemctl stop bhttpd.service
+
+%postun
+/bin/rm -f %{_systemdir}/bhttpd.service
+/bin/rm -f %{_systemdir}/balerd.slave.service
+/bin/rm -f %{_systemdir}/balerd.master.service
+/usr/bin/systemctl daemon-reload
+/sbin/ldconfig
 
 
 # baler-devel package
