lib: rpm7 - profile.d/set-ovis-variable.sh softlink
Add the forgotten soft-link of profile.d/set-ovis-variables.sh in RPM7
installation.

--- a/lib/packaging/ovis-lib-rhel7.spec.in
+++ b/lib/packaging/ovis-lib-rhel7.spec.in
@@ -312,9 +312,11 @@ Miscellaneous file in ovis-lib project.
 %exclude %{_includedir}/ovis-test/
 
 %post misc
+/bin/ln -fs %{_sysconfdir}/profile.d/set-ovis-variables.sh /etc/profile.d/set-ovis-variables.sh
 /bin/ln -fs %{_sysconfdir}/ld.so.conf.d/ovis-ld-so.conf /etc/ld.so.conf.d/ovis-ld-so.conf
 /sbin/ldconfig
 %postun misc
+/bin/rm -f /etc/profile.d/set-ovis-variables.sh
 /bin/rm -f /etc/ld.so.conf.d/ovis-ld-so.conf
 /sbin/ldconfig
 
