baler: abhttp python package installation
Add abhttp python package installation rules for automake.

--- a/baler/configure.ac
+++ b/baler/configure.ac
@@ -28,6 +28,7 @@ dnl change sharedstatedir default
 test "$sharedstatedir" = '${prefix}/com' && sharedstatedir='${prefix}/var/lib'
 
 OPTION_DEFAULT_ENABLE([dict], [ENABLE_DICT])
+OPTION_DEFAULT_ENABLE([python], [ENABLE_PYTHON])
 OPTION_DEFAULT_DISABLE([etc], [ENABLE_ETC])
 dnl Swig stuffs
 OPTION_DEFAULT_DISABLE([swig], [ENABLE_SWIG])
@@ -148,6 +149,8 @@ AC_CONFIG_FILES([Makefile docs/Makefile src/Makefile
 	etc/systemd/Makefile
 	dict/Makefile
 	rpm/rhel7.spec
+	python/Makefile
+	python/abhttp/Makefile
 ])
 
 AC_OUTPUT
