--- a/configure.ac
+++ b/configure.ac
@@ -110,6 +110,7 @@ util/sample_init_scripts/genders/etc/Makefile
 util/sample_init_scripts/genders/src/Makefile
 util/sample_init_scripts/genders/etc/init.d/Makefile
 packaging/ovis-rhine.spec
+packaging/ovis-mon7.spec
 packaging/ovis-mon6.spec
 packaging/ovis-base.spec])
 AC_OUTPUT
