--- a/ldms/scripts/Makefile.am
+++ b/ldms/scripts/Makefile.am
@@ -40,4 +40,5 @@ bin_SCRIPTS += ldms_local_auth_test.sh
 bin_SCRIPTS += ldms_local_amqptest.sh
 bin_SCRIPTS += ldms_local_sostest.sh
 
+bin_SCRIPTS += ldms_local_lnet_statstest.sh
 endif
