--- a/ldms/man/Makefile.am
+++ b/ldms/man/Makefile.am
@@ -14,6 +14,7 @@ Plugin_cray_system_sampler_variants.man \
 Plugin_kgnilnd.man \
 Plugin_knc_sampler.man \
 Plugin_meminfo.man \
+Plugin_lnet_stats.man \
 Plugin_procinterrupts.man \
 Plugin_procnetdev.man \
 Plugin_procnfs.man \
