baler: bclient - BStore2Conn
Add a connection class to bquery store (BStore2) interface. This
commit also include the folowing:

- add convenient token iteration interface over a message to bquery
  library
- add convenient interfaces to baler swig to aid BStore2Conn
- modify connection interface
- update test programs
- update unicode handling
- update Service behavior to automatically load the saved unified maps
  before initating connections.

--- a/baler/python/test/bclient.yaml
+++ b/baler/python/test/bclient.yaml
@@ -1,6 +1,6 @@
-bhttpd:
-    srv0: ["localhost:18000", "localhost:19000"]
-    srv1: ["localhost:18001", "localhost:19001"]
-    srv2: ["localhost:18002", "localhost:19002"]
-    srv3: ["localhost:18003", "localhost:19003"]
-store: ./tmp/bclient.store
+sources:
+    srv0: ["http://localhost:18000", "http://localhost:19000"]
+    srv1: ["http://localhost:18001", "http://localhost:19001"]
+    srv2: ["http://localhost:18002", "http://localhost:19002"]
+    srv3: ["bstore:///home/narate/projects/ovis.baler2/baler/test/indy_test/store.3"]
+store: "./tmp/localstore"
