baler: bclient documentation and bug fixes.
- bclient man page (in doxygen)
- update bclient interactive help
- fix timestamp format bug in `msg_query`
- guard `max_id` in `UnifiedMapper` in the case of empty map
- fix bclient empty command bug
- fix empty token bug in the pattern unification logic
- fix bclient command `img_query` required parameter bug
- ptn_query supports `format=FMT`
- ptn_query supports `order=KEY_ORDER`

--- a/baler/docs/Makefile.am
+++ b/baler/docs/Makefile.am
@@ -7,7 +7,10 @@ doc: docs
 docs: doxygen-out texdocs
 
 #DOCDEPS = $(shell find $(top_srcdir)/src -iname '*.[ch]')
-DOCDEPS = $(top_srcdir)/src/*/*.c $(top_srcdir)/src/*/*.h
+DOCDEPS = $(top_srcdir)/src/*/*.c $(top_srcdir)/src/*/*.h \
+          $(top_srcdir)/python/abhttp/*.py \
+          $(top_srcdir)/python/abhttp/*.dox
+
 
 doxygen-out: $(DOCDEPS)
 	@DOXYGEN@
@@ -72,7 +75,8 @@ man/man5/%.5: man/man3/%.3
 man1_files = man/man1/balerd.1 \
 	    man/man1/bhttpd.1 \
 	    man/man1/bquery.1 \
-	    man/man1/bassoc.1
+	    man/man1/bassoc.1 \
+	    man/man1/bclient.1
 
 $(man1_files): doxygen-out
 
