Added compid and jobid to papi.

--- a/ldms/src/sampler/Makefile.am
+++ b/ldms/src/sampler/Makefile.am
@@ -150,7 +150,7 @@ endif
 if ENABLE_PAPI
 libspapi_la_SOURCES = papi.c
 libspapi_la_CFLAGS = $(AM_CFLAGS) $(LIBPAPI_INCDIR_FLAG)
-libspapi_la_LIBADD = $(COMMON_LIBADD) -lpapi -lm
+libspapi_la_LIBADD = $(COMMON_LIBADD) $(JOBID_LIBFLAGS) -lpapi -lm
 pkglib_LTLIBRARIES += libspapi.la
 endif
 
