--- a/.gitmodules
+++ b/.gitmodules
@@ -3,7 +3,7 @@
 	url = gitlab@gitlab.opengridcomputing.com:ovis/libevent.git
 [submodule "sos"]
 	path = sos
-	url = gitlab@gitlab.opengridcomputing.com:tom/SOS.git
+	url = https://github.com/opengridcomputing/SOS.git
 [submodule "gpcd-support"]
 	path = gpcd-support
 	url = git@gitlab.sandia.gov:ovis/gpcd-support.git
