MSR  numaaware counters and new msr configuration file example

--- a/ldms/man/Makefile.am
+++ b/ldms/man/Makefile.am
@@ -14,10 +14,12 @@ Plugin_cray_system_sampler_variants.man \
 Plugin_kgnilnd.man \
 Plugin_knc_sampler.man \
 Plugin_meminfo.man \
+Plugin_msr_interlagos.man \
 Plugin_procinterrupts.man \
 Plugin_procnetdev.man \
 Plugin_procnfs.man \
 Plugin_store_csv.man \
+Plugin_store_function_csv.man \
 Plugin_store_sos.man \
 Plugin_vmstat.man
 
