--- a/baler/rpm/rhel7.spec.in
+++ b/baler/rpm/rhel7.spec.in
@@ -138,7 +138,7 @@ Development files for Baler
 Summary: Baler interactive client for distributed baler
 Group: %{_grp}
 Version: @PACKAGE_VERSION@
-Requires: baler >= @PACKAGE_VERSION@, PyYAML >= 3.0
+Requires: baler >= @PACKAGE_VERSION@, PyYAML >= 3.0, python-dateutil
 %description bclient
 `bclient` is a Baler interactive client with command-line interface for
 distributed baler.
