lib,ldms,baler: RPM7 update and config bug fix
- Configuration files in `baler` and `ovis-ldms` packages are not
  marked as configuration file, making yum (or rpm) to overwrite them
  at update. This commit address this issue.

- RPM `%post` (post-install of the new package in the update case)
  scriptlet is called before `%postun` (post-uninstall of the old
  package in the update case). This results in symlinks missing as the
  new link created in `%post` will be removed by `%postun`. This
  commit address this issue by using `%posttrans` instead, which will
  be invoked lastly (in both install and update).

--- a/baler/rpm/rhel7.spec.in
+++ b/baler/rpm/rhel7.spec.in
@@ -98,11 +98,15 @@ rm -rf %{buildroot}
 %if "@ENABLE_SWIG_TRUE@x" == "x"
 %{_prefix}/lib*/python*
 %endif
+%config %{_sysconfdir}/baler/*.env
+%config %{_sysconfdir}/baler/*.conf
+%config %{_sysconfdir}/baler/hosts.txt
+%config %{_sysconfdir}/baler/eng-dictionary
 %{_sysconfdir}
 %exclude %{_bindir}/bclient
 %exclude %{_prefix}/lib*/python*/site-packages/abhttp
 
-%post
+%posttrans
 /sbin/ldconfig
 /bin/ln -fs %{_sysconfdir}/systemd/system/balerd.master.service %{_systemdir}/balerd.master.service
 /bin/ln -fs %{_sysconfdir}/systemd/system/balerd.slave.service %{_systemdir}/balerd.slave.service
