--- a/lib/packaging/ovis-lib-rhel7.spec.in
+++ b/lib/packaging/ovis-lib-rhel7.spec.in
@@ -312,7 +312,7 @@ Miscellaneous file in ovis-lib project.
 # These are the files that we don't care
 %exclude %{_includedir}/ovis-test/
 
-%post misc
+%posttrans misc
 /bin/ln -fs %{_sysconfdir}/profile.d/set-ovis-variables.sh /etc/profile.d/set-ovis-variables.sh
 /bin/ln -fs %{_sysconfdir}/ld.so.conf.d/ovis-ld-so.conf /etc/ld.so.conf.d/ovis-ld-so.conf
 /sbin/ldconfig
