top-level: project name, git-SHA and version.
- modify the top-level project name from `ldms-all` to `ovis`. This is
  so that the tgz distribution will have the name `ovis-3.3.1.tgz`.

- git SHA precedence change to
    1) real git-SHA
    2) SHA.txt
    3) NO_GIT_SHA
  The same goes for TAG.

- automatically generate SHA.txt and TAG.txt when calling `make dist`.

- change LDMS_GIT_LONG macro to OVIS_GIT_LONG, and LDMS_GIT_SHORT to
  OVIS_GIT_SHORT. Also change places in `*/src/` affected by the
  refactroring.

- update pedigree generation script to use OVIS_GIT_LONG

- add '-V' and '--version' to `balerd`, `bhttpd`, and `bquery` to
  print package version number and git-SHA.

- add version information and git-SHA to `balerd` and `bhttpd`.

--- a/Makefile.am
+++ b/Makefile.am
@@ -15,7 +15,7 @@ TAG.txt
 docdir = $(datadir)/doc/@PACKAGE@-@VERSION@
 # dist_doc_DATA = README.txt
 
-SUBDIRS = lib 
+SUBDIRS = lib
 
 # we build of the maybe vars to control build order, which
 # AM_CONDITIONAL does not preserve.
@@ -107,3 +107,20 @@ install-exec-local:
 			$(DESTDIR)$(bindir)/*.sh ; \
 		/bin/rm -rf $(DESTDIR)$(libdir)/ovis-libevent/pkgconfig ; \
 	fi
+
+SHA.txt:
+	COMMIT=`git rev-parse HEAD 2>/dev/null`; \
+	DIRTY=`git status -uno -s 2>/dev/null`; \
+	if test -z "$$COMMIT"; then \
+		COMMIT="NO_GIT"; \
+	elif test -n "$$DIRTY"; then \
+		COMMIT=$${COMMIT}-dirty; \
+	fi ; \
+	echo "$$COMMIT" > SHA.txt
+
+TAG.txt:
+	TAG=`git describe --tags 2>/dev/null`; \
+	if test -z "$$TAG"; then \
+		TAG="NO_GIT"; \
+	fi ; \
+	echo "$$TAG" > TAG.txt
