--- a/automake/pedigree.am
+++ b/automake/pedigree.am
@@ -3,13 +3,8 @@ install-exec-local:
 	if [ -f $(PEDIGREE) ]; then \
 		rm -f $(PEDIGREE); \
 	fi ; \
-	COMMIT=`git rev-parse HEAD`; \
-	DIRTY=`git status -uno -s | wc -l`; \
-	if [ $$DIRTY != 0 ]; then \
-		COMMIT="$$COMMIT-dirty" ; \
-	fi ; \
 	echo '#!/bin/bash' > $(PEDIGREE) ; \
-	echo echo commit-id: $$COMMIT >> $(PEDIGREE) ; \
+	echo echo commit-id: "$(OVIS_GIT_LONG)" >> $(PEDIGREE) ; \
 	echo echo package: "$(PACKAGE_STRING)" >> $(PEDIGREE) ; \
 	echo echo questions to: "$(PACKAGE_BUGREPORT)" >> $(PEDIGREE) ; \
 	echo echo source location: "$(abs_top_srcdir)" >> $(PEDIGREE) ; \
