fix makefile for --disable-lustre

--- a/ldms/src/sampler/cray_system_sampler/Makefile.am
+++ b/ldms/src/sampler/cray_system_sampler/Makefile.am
@@ -5,11 +5,14 @@ CORE = ../../core
 AM_CFLAGS = -I$(srcdir)/$(CORE) -I$(top_srcdir) @OVIS_LIB_INCDIR_FLAG@
 AM_LDFLAGS = @OVIS_LIB_LIBDIR_FLAG@
 
+COMMON_LIBADD = $(CORE)/libldms.la \
+		@LDFLAGS_GETTIME@ -lovis_util -lcoll
+
 if ENABLE_CRAY_SYSTEM_SAMPLER
 
 CRAY_CFLAGS_ = $(AM_CFLAGS) @RCA_INCDIR_FLAG@ @KRCA_INCDIR_FLAG@ \
 			@CRAY_HSS_DEVEL_INCDIR_FLAG@ \
-                        -I@CRAY_HSS_DEVEL_INCDIR@/rsms
+			-I@CRAY_HSS_DEVEL_INCDIR@/rsms
 CRAY_LDFLAGS_ = $(AM_LDFLAGS) @RCA_LIBDIR_FLAG@ @RCA_LIB64DIR_FLAG@ \
 			@KRCA_LIBDIR_FLAG@ @KRCA_LIB64DIR_FLAG@ \
 			@CRAY_HSS_DEVEL_LIBDIR_FLAG@ \
