Removed -DLDMSD_UPDATE_TIME from CFLAGS

--- a/util/sample_init_scripts/XC40_RR/configure.sh.template
+++ b/util/sample_init_scripts/XC40_RR/configure.sh.template
@@ -42,7 +42,7 @@ if [ -n "$LIBEVENT_PREFIX" ]; then
 fi
 
 #CFLAGS='-g -O0 -Wl,-z,defs -I/opt/cray/rca/default/include'
-CFLAGS='-g -O0 -Wl,-z,defs -I/opt/cray/rca/default/include -DLDMSD_UPDATE_TIME'
+CFLAGS='-g -O0 -Wl,-z,defs -I/opt/cray/rca/default/include'
 
 # Exit immediately if a command failed
 set -e
