--- a/ldms/configure.ac
+++ b/ldms/configure.ac
@@ -34,7 +34,7 @@ OPTION_DOC
 OPTION_DEFAULT_DISABLE([etc], [ENABLE_ETC])
 
 OPTION_DEFAULT_ENABLE([core], [ENABLE_CORE])
-OPTION_DEFAULT_ENABLE([papi], [ENABLE_PAPI])
+OPTION_DEFAULT_DISABLE([papi], [ENABLE_PAPI])
 OPTION_DEFAULT_ENABLE([mmap], [ENABLE_MMAP])
 OPTION_DEFAULT_ENABLE([perf], [ENABLE_PERF])
 OPTION_DEFAULT_ENABLE([sensors], [ENABLE_SENSORS])
